; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/misc/extr_drv2665.c_drv2665_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/misc/extr_drv2665.c_drv2665_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drv2665_data = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@drv2665_init_regs = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"Failed to write init registers: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drv2665_data*)* @drv2665_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @drv2665_init(%struct.drv2665_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.drv2665_data*, align 8
  %4 = alloca i32, align 4
  store %struct.drv2665_data* %0, %struct.drv2665_data** %3, align 8
  %5 = load %struct.drv2665_data*, %struct.drv2665_data** %3, align 8
  %6 = getelementptr inbounds %struct.drv2665_data, %struct.drv2665_data* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* @drv2665_init_regs, align 4
  %9 = load i32, i32* @drv2665_init_regs, align 4
  %10 = call i32 @ARRAY_SIZE(i32 %9)
  %11 = call i32 @regmap_register_patch(i32 %7, i32 %8, i32 %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %1
  %15 = load %struct.drv2665_data*, %struct.drv2665_data** %3, align 8
  %16 = getelementptr inbounds %struct.drv2665_data, %struct.drv2665_data* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @dev_err(i32* %18, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %2, align 4
  br label %23

22:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %14
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @regmap_register_patch(i32, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
